syntax = "proto3";
package kv;
option go_package = "mini_lsm/pb;pb";


//message KV {
//  bytes key = 1;
//  bytes value = 2;
////  bytes user_meta = 3;
//  uint64 version = 4;
////  uint64 expires_at = 5;
////  bytes meta = 6;
//
//  // Stream id is used to identify which stream the KV came from.
////  uint32 stream_id = 10;
//  // Stream done is used to indicate end of stream.
////  bool stream_done = 11;
//}
//
//
//// MVCCKey 定义 - 存储引擎中实际使用的复合键
message Key {
  bytes key = 1;           // 原始key
  uint64 version = 2;       // 版本号(单调递增)
  uint64 timestamp = 3;     // 时间戳
}

// MVCCValue 定义 - 支持多版本的值
message Value {
  bytes value = 1;         // 实际值
  uint64 create_revision = 2;    // 创建版本
  uint64 mod_revision = 3;       // 修改版本
  uint64 version = 4;           // 当前值的版本号
  bool is_deleted = 5;         // 标记删除
  uint64 lease_id = 6;          // 租约ID(用于TTL)
}

message KeyValue {
  bytes Key =1;
  bytes Value =2;
}